WanaLyzer/out/numpy/typing/tests/data/fail/lib_version.pyi
from numpy.lib import NumpyVersion as NumpyVersion

version: NumpyVersion
